added ReentrantReadWriteLock to lock database when writing & added unit tests